--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -48,10 +48,10 @@
 	<ItemGroup>
 		<Reference Include="SharpDX, Version=2.6.2.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
 			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\x360ce.App.Beta\Resources\SharpDX\SharpDX.dll</HintPath>
+			<HintPath>Resources\SharpDX\SharpDX.dll</HintPath>
 		</Reference>
 		<Reference Include="SharpDX.DirectInput">
-			<HintPath>..\x360ce.App.Beta\Resources\SharpDX\SharpDX.DirectInput.dll</HintPath>
+			<HintPath>Resources\SharpDX\SharpDX.DirectInput.dll</HintPath>
 		</Reference>
 		<Reference Include="System.configuration" />
 		<Reference Include="System.Configuration.Install" />
