--- a/x360ce.Net60Test/x360ce.Net60Test.csproj
+++ b/x360ce.Net60Test/x360ce.Net60Test.csproj
@@ -36,7 +36,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\x360ce.App.Beta\x360ce.App.csproj" />
+		<ProjectReference Include="..\x360ce.App\x360ce.App.csproj" />
 		<ProjectReference Include="..\x360ce.Engine\x360ce.Engine.csproj" />
 	</ItemGroup>
 
