Hid Guardian tab updated.

--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -125,7 +125,9 @@
 		<EmbeddedResource Include="app.ico" />
 		<Content Include="Presets\ReadMe.txt" />
 		
-		<EmbeddedResource Include="Documents\ChangeLog.txt" />		
+		<EmbeddedResource Include="Documents\ChangeLog.txt" />
+		
+		<EmbeddedResource Include="Documents\Help_HidHide.rtf" />		
 		<EmbeddedResource Include="Documents\License.txt" />
 
 		<EmbeddedResource Include="Resources\x360ce.Engine.dll" />
